# rpmrevmatch

./: .gitignore  CMakeLists.txt  CMakePresets.json  config.txt  graph.py  innefficiency.py  main.cpp  output - Copy.csv  output.csv  test_data.csv
Docs/html/: annotated.html  annotated_dup.js  class_dummy_e_l_m327-members.html  class_dummy_e_l_m327.html  class_dummy_e_l_m327.js  class_e_l_m327_base-members.html  class_e_l_m327_base.html  class_e_l_m327_base.js  class_e_l_m327_interface-members.html  class_e_l_m327_interface.html  class_e_l_m327_interface.js  class_gear_box-members.html  class_gear_box.html  class_gear_box.js  classes.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  main_8cpp.js  navtreedata.js  navtreeindex0.js
Docs/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js
Docs/latex/: annotated.tex  class_dummy_e_l_m327.tex  class_e_l_m327_base.tex  class_e_l_m327_interface.tex  class_gear_box.tex  files.tex  hierarchy.tex  main_8cpp.tex  refman.tex
config/: CMakeLists.txt  configuration.cpp  configuration.hpp
io/: CMakeLists.txt  csv_writer.cpp  csv_writer.hpp  elm327.cpp  elm327.hpp
logs/: 2025-08-18_16-13-04.csv  output.csv  test_data.csv
src/: main.cpp
utils/: CMakeLists.txt  error_handling.hpp  signal_handler.cpp  signal_handler.hpp
